Fix overflow by adding a scrollbar to the display

--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ body{
 
     font-size: 72px;
     text-align: right;
+
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 .calculator-buttons{
